--- a/FrontEnd/FrontEndCode/src/app/pages/signup-siteuser/signup-siteuser.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/signup-siteuser/signup-siteuser.component.html
@@ -54,7 +54,7 @@
       aria-label="Breakfast Start Time"
       [ngxTimepicker]="breakfastStartTimepicker"
       readonly
-      formControlName="breakfastStartTime"
+      formControlName="breakfastTime"
     >
     <ngx-material-timepicker #breakfastStartTimepicker [enableKeyboardInput]="true"></ngx-material-timepicker>
     
